--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,3 +2,6 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.userName=root
 jdbc.password=root
 jdbc.url=jdbc:mysql://127.0.0.1:3306/test
+jdbc.maxConnection=20
+jdbc.minConnection=5
+jdbc.timeout=2000
