优化statement参数设置部分，改为使用参数注入的方式注入参数

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.userName=root
-jdbc.password=123
+jdbc.password=
 jdbc.url=jdbc:mysql://127.0.0.1:3306/test
 jdbc.maxConnection=20
 jdbc.minConnection=5
