--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,17 @@
     </properties>
 
     <dependencies>
+
+
         <!-- 添加Spring依赖 -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
