--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,13 @@
             <version>1.8.3</version>
         </dependency>
 
+        <!--引入cglib代理 -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
 
     </dependencies>
 
